<resources>
    <string name="app_name">CashGuru</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <string name="please_wait_app_offers">Please wait, While we retrieve some offers for you!</string>
    <string name="please_wait">Please Wait!</string>
    <string name="title_activity_register">Sign Up</string>
    <string name="action_sign_in">Login/Sign Up</string>
    <string name="action_register">New User?</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="prompt_Name">Name</string>
    <string name="prompt_mobile">Mobile Number</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_email">Email Id</string>
    <string name="action_Submit">Submit</string>
    <string name="prompt_referral">Referral Code (Optional)</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_duplicate_email">This email address is already in use</string>
    <string name="error_invalid_mobile">This mobile number is invalid</string>
    <string name="error_field_required">This field is required</string>
    <string name="country_code_prompt">Choose a country</string>
    <string name="gcm_defaultSenderId">293017939033</string>
    <string-array name="country_codes">
        <item>+91 (IN)</item>
    </string-array>
    <string name="title_activity_main">CashGuru</string>
    <string name="referral_code">Your Referral Code is : </string>
    <string name="referral_conditions">How it works : \r\n1. Invite your friends and earn upto ₹{refer} for each referral.\r\n2. ₹{refer_1} will be credited to your account when your friend installs {count_1} app and ₹{refer_2} when your friend installs {count_2} app.\r\nNote: Valid for new users only.</string>
    <string name="referral_conditions_2">How it works : \r\n1. Invite your friends and earn upto ₹{refer} for each referral.\r\n2. ₹{refer_1} will be credited to your account when your friend installs {count_1} app and ₹{refer_2} when your friend installs {count_2} app.\r\nNote: Valid for new users only.</string>
    <string name="share_text">Share</string>
    <string name="share_using">Share Referral Code via</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save">Save</string>
    <string name="send">Send</string>
    <string name="contact_us_title_string">Contact Us</string>
    <string name="edit_number">Edit Number</string>
    <string name="update">Update</string>
    <string name="resend">Resend OTP</string>
    <string name="recharge_mobile">Mobile</string>
    <string name="recharge_dth">DTH</string>
    <string name="recharge_data_card">Data Card</string>
    <string name="recharge_prepaid">Prepaid</string>
    <string name="recharge_postpaid">Postpaid</string>
    <string name="empty_recycler_view_string">Oops! nothing to Show here.</string>
    <string-array name="recharge_mobile_prepaid_company">
        <item>Aircel</item>
        <item>Airtel</item>
        <item>Vodafone</item>
        <item>BSNL</item>
        <item>Docomo (CDMA)</item>
        <item>Docomo (GSM)</item>
        <item>Idea</item>
        <item>Tata Indicom</item>
        <item>Videocon</item>
        <item>MTNL</item>
        <item>Reliance Mobile (CDMA)</item>
        <item>Reliance Mobile (GSM)</item>
        <item>Unilor</item>
        <item>MTS</item>
        <item>Virgin (CDMA)</item>
        <item>Virgin (GSM)</item>
    </string-array>
    <string-array name="recharge_mobile_postpaid_company">
        <item>Aircel</item>
        <item>Airtel</item>
        <item>Vodafone</item>
        <item>BSNL</item>
        <item>Docomo</item>
        <item>Idea</item>
        <item>Tata Indicom</item>
        <item>Reliance Mobile (CDMA)</item>
        <item>Reliance Mobile (GSM)</item>
        <item>MTS</item>
    </string-array>
    <string-array name="recharge_dth_company">
        <item>Airtel Digital TV</item>
        <item>Dish TV</item>
        <item>Reliance Digital TV</item>
        <item>SUN Direct</item>
        <item>Tata Sky</item>
        <item>Videocon D2H</item>
    </string-array>
    <string-array name="recharge_data_card_prepaid_company">
        <item>Aircel</item>
        <item>Airtel</item>
        <item>Vodafone</item>
        <item>BSNL</item>
        <item>MTNL</item>
        <item>Reliance NetConnect+</item>
        <item>Tata Photon Plus</item>
        <item>Tata Photon Whiz</item>
        <item>MTS MBlaze</item>
        <item>MTS MBrowse</item>
    </string-array>
    <string-array name="recharge_data_card_postpaid_company">
        <item>Aircel</item>
        <item>Airtel</item>
        <item>Vodafone</item>
        <item>BSNL</item>
        <item>MTNL</item>
        <item>Reliance NetConnect+</item>
        <item>Tata Photon Plus</item>
        <item>Tata Photon Whiz</item>
        <item>MTS MBlaze</item>
        <item>MTS MBrowse</item>
    </string-array>
    <string-array name="recharge_mobile_circle">
        <item>None</item>
        <item>Delhi/NCR</item>
        <item>Mumbai</item>
        <item>Kolkata</item>
        <item>Maharashtra</item>
        <item>Andhra Pradesh</item>
        <item>Tamil Nadu</item>
        <item>Karnataka</item>
        <item>Gujarat</item>
        <item>Uttar Pradesh (E)</item>
        <item>Madhya Pradesh</item>
        <item>Uttar Pradesh (W)</item>
        <item>West Bengal</item>
        <item>Rajasthan</item>
        <item>Kerala</item>
        <item>Punjab</item>
        <item>Haryana</item>
        <item>Bihar \u0026 Jharkhand</item>
        <item>Orissa</item>
        <item>Assam</item>
        <item>North East</item>
        <item>Himachal Pradesh</item>
        <item>Jammu \u0026 Kashmir</item>
    </string-array>
    <string name="recharge_text_balance">Your Balance : </string>
    <string name="recharge_text_top_up">Top up your Phone</string>
    <string name="recharge_mobile_hint_text">Mobile Number</string>
    <string name="recharge_amount_hint_text">Amount</string>
    <string name="recharge_message_hint_text">Any Special recharge (2G/3G/SMS etc.)</string>
    <string name="recharge_type">Recharge Type</string>
    <string name="recharge_number_text">Number</string>
    <string name="recharge_subscriber_text">Number</string>
    <string name="recharge_special_recharge">Special Recharge?</string>
    <string name="contact_us_message_hint_text">How can we help you?</string>
    <string name="app_install_install">Try \u0026 Earn</string>
    <string name="new_user_popup_title">Welcome!</string>
    <string name="new_user_popup_content">Welcome to CashGuru, Earn free recharge for just checking out some of the best Android apps, you will get INSTANT mobile recharge in minutes!</string>
    <string name="new_user_popup_button">Start Earning</string>
    <string name="google_url_shortner_api_key">AIzaSyAyt-jN1d56M5xu8xDXnHdJ3d4oV74SHvU</string>
    <string name="user_profile_name">Name</string>
    <string name="user_profile_sex">Sex</string>
    <string name="user_profile_dob">Date of Birth</string>
    <string name="user_profile_phone">Phone</string>
    <string name="user_profile_type">Type</string>
    <string name="user_profile_Operator">Operator</string>
    <string name="user_profile_Circle">Circle</string>
    <string name="user_profile_city">City</string>
    <string name="user_profile_state">State</string>
    <string name="user_profile">Profile</string>
    <string-array name="user_profile_sex_array">
        <item>Select</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="user_profile_mobile_type_array">
        <item>Select</item>
        <item>Prepaid</item>
        <item>Postpaid</item>
    </string-array>
    <string-array name="user_profile_state_array">
        <item>Select</item>
        <item>Andaman and Nicobar Islands</item>
        <item>Andhra Pradesh</item>
        <item>Arunachal Pradesh</item>
        <item>Assam</item>
        <item>Bihar</item>
        <item>Chandigarh</item>
        <item>Chhattisgarh</item>
        <item>Dadra and Nagar Haveli</item>
        <item>Daman and Diu</item>
        <item>NCR/Delhi</item>
        <item>Goa</item>
        <item>Gujarat</item>
        <item>Haryana</item>
        <item>Himachal Pradesh</item>
        <item>Jammu and Kashmir</item>
        <item>Jharkhand</item>
        <item>Karnataka</item>
        <item>Kerala</item>
        <item>Lakshadweep</item>
        <item>Madhya Pradesh</item>
        <item>Maharashtra</item>
        <item>Manipur</item>
        <item>Meghalaya</item>
        <item>Mizoram</item>
        <item>Nagaland</item>
        <item>Odisha</item>
        <item>Puducherry</item>
        <item>Punjab</item>
        <item>Rajasthan</item>
        <item>Sikkim</item>
        <item>Tamil Nadu</item>
        <item>Telangana</item>
        <item>Tripura</item>
        <item>Uttar Pradesh</item>
        <item>Uttarakhand</item>
        <item>West Bengal</item>
    </string-array>
    <string name="sms_api_key">87880AE6FkBTWqTR559cd101</string>
    <string name="msg_sit_back">Sit back &amp; Relax! while we verify your mobile number</string>
    <string name="lbl_enter_otp">Enter OTP</string>
    <string name="msg_manual_otp">(Enter the OTP below in case if we fail to detect the SMS automatically)</string>
    <string name="title_activity_offer">OfferActivity</string>
    <string name="permission_get_account_rationale">Get Account permission is needed for CashGuru to work properly.</string>
    <string name="permission_read_profile_rationale">Read Profile permission is needed for CashGuru to work properly.</string>
    <string name="permission_read_contacts_rationale">Read Contacts permission is needed for CashGuru to work properly.</string>
    <string name="permission_internet_rationale">Internet permission is needed for CashGuru to work properly.</string>
    <string name="permission_read_phone_state_rationale">Read Phone State permission is needed for CashGuru to work properly.</string>
    <string name="permission_c2dm_rationale">C2DM permission is needed for CashGuru to work properly.</string>
    <string name="permission_receive_sms_rationale">Receive SMS permission is needed for CashGuru to work properly.</string>
    <string name="permission_access_network_state_rationale">Access Network State permission is needed for CashGuru to work properly.</string>
    <string name="permission_wake_lock_rationale">Wake Lock permission is needed for CashGuru to work properly.</string>
    <string name="permission_boot_completed_rationale">Boot Completed permission is needed for CashGuru to work properly.</string>
    <string name="permission_vibrate_rationale">Vibrate permission is needed for CashGuru to work properly.</string>
    <string name="permission_install_shortcut_rationale">Install Shortcut permission is needed for CashGuru to work properly.</string>
    <string name="permission_access_coarse_location">Access to Coarse Location permission is needed for CashGuru to work properly.</string>
    <string name="drawer_item_offer_wall">Offer Wall</string>
    <string name="drawer_item_hot_deals">Hot Deals</string>
    <string name="drawer_item_refer">Refer \u0026 Earn</string>
    <string name="drawer_item_top_up">Top Up</string>
    <string name="drawer_item_contact_us">Contact Us</string>
    <string name="drawer_item_tandc">T \u0026 C</string>
    <string name="drawer_item_faq">FAQ</string>
</resources>