<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="com.cashon.ui.ReferFriendsFragment"
    android:orientation="horizontal">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:text="@string/referral_code" style="@style/edittext_style" android:layout_gravity="center"/>
            <TextView android:id="@+id/textReferralCode"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                style="@style/edittext_single_line_style" android:layout_gravity="center"
                android:textSize="@dimen/text_size_title"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:text="@string/referral_conditions" style="@style/edittext_style"/>
            </LinearLayout>

            <Button
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:id="@+id/buttonShareReferal" android:text="@string/share_text"
                android:layout_gravity="center"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
