<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingLeft="@dimen/mobile_verification_main_padding_left"
    android:paddingRight="@dimen/mobile_verification_main_padding_right"
    android:paddingTop="@dimen/mobile_verification_main_padding_top">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="horizontal"
        android:layout_marginBottom="8dp">
        <TextView
            android:layout_width="0px"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:id="@+id/mobile_verification_text_view"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_title_17"
            android:layout_marginRight="@dimen/mobile_verification_text_margin_right"/>
        <Button
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/mobile_verification_edit_button"
            android:text="@string/edit_number"
            android:background="@drawable/default_button_style"
            android:textColor="@color/white"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="horizontal"
        android:id="@+id/mobile_verification_update_layout"
        android:visibility="gone"
        android:layout_marginBottom="8dp">
        <EditText
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:id="@+id/mobile_verification_mobile_number"
            android:inputType="phone"
            android:hint="@string/recharge_mobile_hint_text"
            android:textColor="@color/black"
            android:textColorHint="@color/black_double_dim"
            android:textSize="@dimen/text_size_title_17"
            android:layout_marginRight="@dimen/mobile_verification_text_margin_right"/>
        <Button
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/mobile_verification_update_button"
            android:text="@string/update"
            android:background="@drawable/default_button_style"
            android:textColor="@color/white"/>
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/mobile_verification_resend_button"
        android:text="@string/resend"
        android:background="@drawable/default_button_style"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:padding="6dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ProgressBar
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:id="@+id/mobile_verification_progress_bar"
            android:layout_centerInParent="true"
            android:progressTint="@color/primary"
            android:indeterminateTint="@color/primary"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mobile_verification_tick_text_view"
            android:layout_centerInParent="true"
            android:textColor="@color/black"
            android:textColorHint="@color/black_double_dim"
            android:textSize="@dimen/text_size_title_24" />

    </RelativeLayout>
</LinearLayout>