<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingLeft="@dimen/contact_us_main_padding_left"
    android:paddingRight="@dimen/contact_us_main_padding_right"
    android:paddingTop="@dimen/contact_us_main_padding_top">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contact_us_title_string"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_20"
        android:layout_marginBottom="@dimen/contact_us_balance_margin_bottom"
        android:layout_alignParentTop="true"
        android:id="@+id/contact_us_contact_us_edit_text"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/primary"
        android:layout_below="@id/contact_us_contact_us_edit_text"
        android:id="@+id/contact_us_upper_divider"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:gravity="center"
        android:id="@+id/contact_us_bottom_view">
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/contact_us_edit_text"
            android:layout_gravity="center_horizontal"
            android:scrollbars="vertical"
            android:minHeight="@dimen/contact_us_edit_text_height"
            android:hint="@string/contact_us_message_hint_text"
            android:textColor="@color/black"
            android:textColorHint="@color/black_dim"
            android:paddingTop="@dimen/contact_us_default_item_padding_top"
            android:layout_marginTop="@dimen/recharge_default_item_margin_top"
            android:layout_alignParentBottom="true"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/send"
            android:id="@+id/contact_us_send_button"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/recharge_default_item_margin_top"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@id/contact_us_edit_text"
            android:background="@drawable/cashguru_btn_default_holo_light"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/primary"
        android:layout_above="@id/contact_us_bottom_view"
        android:id="@+id/contact_us_lower_divider"
        />
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/contact_us_upper_divider"
        android:layout_above="@id/contact_us_lower_divider"
        android:padding="@dimen/dimen_6">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/empty_recycler_view_string"
            android:visibility="gone"
            android:id="@+id/recharge_history_empty_text_view"
            android:textColor="@color/black"
            android:layout_centerInParent="true"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recharge_history_recycler_view"
            android:scrollbars="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="left|start"
            android:choiceMode="singleChoice"
            android:divider="@null"
            android:background="@color/white"
            android:layout_alignParentTop="true"/>
    </RelativeLayout>
</RelativeLayout>